[package]
name = "interval-tools"
version = "0.1.0"
edition = "2021"
rust-version = "1.61"
authors = ["warhodes-dev <warhodes@gmail.com>"]
repository = "https://github.com/warhodes-dev/interval-tools"
description = "A collection of tools for creating, manipulating, storing, and evaluating intervals of ordered items"
license = "MIT OR Apache-2.0"
keywords = ["interval", "intervals", "range", "ranges", "interval graph", "overlapping intervals"]
categories = ["mathematics", "data-structures", "algorithms"]
exclude = [".gitignore", ".DS_Store"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
